data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2566.wast
;; 7. **Test Description**:    Create a scenario where a `br` or `br_if` targets a block with a mismatch in the value type on the operand stack, ensuring that this inconsistency triggers a type-checking failure.    **Constraint:** Validating operand stack unwinding and re-stacking with branching.    **Relation to Type Mismatch:** Tests type consistency when branching within blocks.

(assert_invalid
  (module (func $type-br-mismatch (result i32)
    (block (result i64) 
      (i32.const 42)
      (br 0 (i64.const 42))
    )
  ))
  "type mismatch"
)